# haskell-challenge

./: README.md
HaskellChallenge.hsproj/: .uuid
HaskellChallenge.hsproj/HaskellChallenges/: HaskellChallenges.cabal
HaskellChallenge.hsproj/HaskellChallenges/lib/: Lists.hs  _Lists.hsplay
