name: HaskellChallenges
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
homepage: pirez.fr
author: Loïc Pirez
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

library
    build-depends:
        base -any
    default-language: Haskell2010
    hs-source-dirs: lib
    other-modules:
        Lists

